# stelline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  install.sh  meson.build  stelline.cc
.github/workflows/: cep.yml  ci.yml  release.yml
applications/: meson.build
applications/frbnn/: generate_plots.py  meson.build
applications/frbnn/model/: README.md  meson.build
applications/frbnn/test/: meson.build
applications/frbnn/test/offline/: default.yaml  main.cc  meson.build
applications/frbnn/test/offline/data/: meson.build
applications/transport/: meson.build
applications/transport/test/ata/: default.yaml  main.cc  meson.build
cli/: package.json  tsconfig.json
cli/src/: cli.ts
cli/src/commands/: report.ts  run.ts  topo.ts
cli/src/report/: model.ts  view.tsx
cli/src/run/: bridge.ts  ffi.ts  footer.tsx  launch.ts  nexus.ts  remote.ts  run.ts  worker.ts
cli/src/shared/: tui.tsx
cli/src/topo/: model.ts  view.tsx
cyberbridge/stack_holoscan/: source_module.cc  source_module.hh
dft_imager/: test.py
docker/: Dockerfile  Dockerfile-base  Dockerfile-dev
docker/patches/: adv_networking_free.patch
docs/: .gitignore  block-ata-receiver.md  block-fbh5-writer.md  block-nexus-bridge.md  block-uvh5-writer.md  considerations.md  contributing.md  host-dependencies.md  index.md  installation.md  overview.md  package.json  quick-start.md  system-configuration.md  troubleshooting.md  validated-hardware.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: Layout.vue  custom.css  index.ts
docs/overview/: acknowledgements.md  deployments.md  design-concepts.md  faq.md  index.md  license.md  roadmap.md  talks.md
docs/quickstart/: configuration.md  considerations.md  dependencies.md  index.md  installation.md  requirements.md
docs/quickstart/examples/: hello-world.md  minimal-streaming.md
docs/sdk-guide/: contributing-guide.md  index.md  metadata-sharing.md  release-notes.md  troubleshooting.md
docs/sdk-guide/bits-reference/: io.md  (+4 more)
examples/: ata-beamformer.yml  ata-correlator.yml  ata-spectrogram.yml
hardware/: asus-esc8000a-e12.md  puget-threadripper-pro-wrx90.md
include/: meson.build
include/stelline/: common.hh  config.hh.in  context.hh  helpers.hh  manifest.hh  meson.build  metadata.hh  metrics.hh  nexus.hh  store.hh  system_info.hh  types.hh
meson/: meson.build
meson/loaders/: meson.build
meson/loaders/cuda/: meson.build
meson/loaders/daqiri/: meson.build
meson/loaders/hdf5/: meson.build
meson/loaders/holoscan_core/: meson.build
meson/loaders/matx/: meson.build
meson/tools/: meson.build
meson/tools/trtexec/: meson.build
python/: meson.build  stelline.in
python/stelline/: __init__.py  __main__.py  app.py  manifest.py  nexus.py  registry.py  stelline  types.py  utils.py
python/stelline/bits/: __init__.py  blade.py  filesystem.py  frbnn.py  socket.py  transport.py
python/stelline/operators/: __init__.py
python/stelline/scripts/: __init__.py  rap.py  report.py  run.py  topo.py
recipes/: ata_16MHz_beam_corr_simple_sink.yaml  ata_16MHz_beamform_simple_sink.yaml  ata_16MHz_correlate_simple_sink.yaml  ata_96MHz_beamform_simple_sink.yaml  ata_96MHz_correlate_simple_sink.yaml  ata_96MHz_rx_dummy_sink.yaml  ata_96MHz_rx_simple_sink.yaml  ata_beamform_simple_sink.yaml  ata_frbnn_dsp_simple_sink.yaml  ata_frbnn_infer_detect.yaml  ata_rx_dummy_sink.yaml  ata_rx_simple_sink.yaml  test.yml
recipes/16MHz/: rx_beamform_correlate_write.yaml  rx_beamform_write.yaml  rx_beamform_zmq.yaml  rx_correlate_write.yaml  rx_write.yaml
recipes/96MHz/: rx.yaml  rx_beamform_write.yaml  rx_correlate_write.yaml  rx_frbnn_infer_detect.yaml  rx_frbnn_write.yaml  rx_write.yaml
resources/: meson.build
resources/frbnn/: generate_plots.py  meson.build
resources/frbnn/model/: .gitignore  meson.build
src/: context.cc  manifest.cc  manifest_provider.cc  meson.build  metadata.cc  metrics_provider.cc  nexus.cc  runtime.cc  system_info.cc
src/ata_receiver/: meson.build  module_impl.cc  module_impl.hh  module_impl_native_cuda.cc
src/bindings/: logging.cc  manifest.cc  types.cc
src/bits/: meson.build
src/domains/: meson.build
src/domains/stelline/uvh5_writer/: block_impl.cc  meson.build  module_impl.cc  module_impl.hh  module_impl_native_cuda.cc
src/dummy_receiver/: block_impl.cc  module_impl.cc  module_impl.hh
src/dummy_writer/: module_impl.hh
src/fbh5_writer/: meson.build  module_impl.cc  module_impl_native_cuda.cc
src/fs/: helpers.hh  meson.build
src/fs/fbh5_writer/: block_impl.cc  meson.build  module_impl.cc  module_impl.hh  module_impl_native_cuda.cc
src/fs/uvh5_writer/: block_impl.cc  meson.build  module_impl.cc  module_impl.hh  module_impl_native_cuda.cc
src/net/: meson.build  multicast.cc  multicast.hh
src/operators/: meson.build
src/operators/blade/: beamformer.cc  correlator.cc  dispatcher.hh  frbnn.cc  meson.build
src/operators/blade/utils/: dispatcher.hh
src/operators/filesystem/: dummy_writer.cc  fbh5_writer_rdma.cc  hdf5_sink_rdma.cc  hdf5_writer_rdma.cc  meson.build  simple_writer.cc  simple_writer_rdma.cc  uvh5_writer_rdma.cc
src/operators/filesystem/utils/: helpers.hh  meson.build  modifiers.cc  modifiers.cu  modifiers.hh
src/operators/frbnn/: base.cc  meson.build
src/operators/io/: dummy_sink.cc  hdf5_sink_rdma.cc  helpers.hh  meson.build  modifiers.cc  modifiers.cu  modifiers.hh  permute.cc  permute.cu  permute.hh  simple_sink.cc  simple_sink_rdma.cc
src/operators/transport/: ata_kernel.cu  ata_kernel.hh  ata_receiver.cc  base.cc  block.hh  dummy_receiver.cc  kernel.cu  kernel.hh  meson.build  receiver.cc  sorter.cc  source.cc  types.hh
src/uvh5_writer/: module_impl.cc  module_impl_native_cuda.cc
subprojects/: cyberether.wrap  daqiri.wrap  erfa.wrap  filterbankc99.wrap  h5dsc99.wrap  hdf5.wrap  holoscan-networking.wrap  uvh5c99.wrap  vfd-gds.wrap
subprojects/packagefiles/daqiri/: meson.build
subprojects/packagefiles/h5dsc99/: hdf5_dep.diff  meson.build
subprojects/packagefiles/vfd-gds/: meson.build
tools/: merger.py  report.py  topology.py
tools/ci/: package_cep.sh
(+178 files in other folders)
